extends Label

func _on_but_1_button_up() -> void:
	self.text = self.text + "1"
	var contador_telefono = 0
	for character in self.text:
		contador_telefono += 1
		if contador_telefono > 9:
			self.text =""

func _on_but_2_button_up() -> void:
	self.text = self.text + "2"
	var contador_telefono = 0
	for character in self.text:
		contador_telefono += 1
		if contador_telefono > 9:
			self.text =""


func _on_but_3_button_up() -> void:
	self.text = self.text + "3"
	var contador_telefono = 0
	for character in self.text:
		contador_telefono += 1
		if contador_telefono > 9:
			self.text =""


func _on_but_4_button_up() -> void:
	self.text = self.text + "4"
	var contador_telefono = 0
	for character in self.text:
		contador_telefono += 1
		if contador_telefono > 9:
			self.text =""

func _on_but_5_button_up() -> void:
	self.text = self.text + "5"
	var contador_telefono = 0
	for character in self.text:
		contador_telefono += 1
		if contador_telefono > 9:
			self.text =""


func _on_but_6_button_up() -> void:
	self.text = self.text + "6"
	var contador_telefono = 0
	for character in self.text:
		contador_telefono += 1
		if contador_telefono > 9:
			self.text =""


func _on_but_7_button_up() -> void:
	self.text = self.text + "7"
	var contador_telefono = 0
	for character in self.text:
		contador_telefono += 1
		if contador_telefono > 9:
			self.text =""

func _on_but_8_button_up() -> void:
	self.text = self.text + "8"
	var contador_telefono = 0
	for character in self.text:
		contador_telefono += 1
		if contador_telefono > 9:
			self.text =""


func _on_but_9_button_up() -> void:
	self.text = self.text + "9"
	var contador_telefono = 0
	for character in self.text:
		contador_telefono += 1
		if contador_telefono > 9:
			self.text =""


func _on_but_0_button_up() -> void:
	self.text = self.text + "0"
	var contador_telefono = 0
	for character in self.text:
		contador_telefono += 1
		if contador_telefono > 9:
			self.text =""
